--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Prerequisites
 *.d
 
+# Sphinx documentation
+docs/_build/
+build
+dist
+junit
+
+
 # Compiled Object files
 *.slo
 *.lo
@@ -29,4 +36,7 @@
 # Executables
 *.exe
 *.out
-*.app
+*.appi
+
+# other
+.DS_Store
